Update 0147 with notes about wall/sprite memory access

--- a/0147-2023-09-27.md
+++ b/0147-2023-09-27.md
@@ -33,3 +33,20 @@
 *   [Intel LPC](https://www.intel.com/content/dam/www/program/design/us/en/documents/low-pin-count-interface-specification.pdf) (Low Pin-Count) interface could be handy for TT05?
     *   SST49LF020 might allow 5-wire access but also parallel access inc. separate row and column parallel address multiplexing, which is interesting for map scanning.
     *   I have some SST49LF008.
+
+# Work for today
+
+*   Completed 0146 journal.
+*   Went searching for SPI Flash ROM chips. Could only find some on ESP-01 boards.
+*   Added some SPI flash memories to shopping carts in DigiKey and eBay.
+*   Look into [Uri's DFFRAM for TT05][DFFRAM]. This seems to use a [specific `RAM32` macro](https://github.com/TinyTapeout/tt05-dffram-example/commit/5634b26a1931e2e1e616897c0c9b0c0e869d62f7) but it's not used by the GHA at this stage. Uri has more info near [here](https://discord.com/channels/1009193568256135208/1152064806447227000/1154962533250236545). Even without `RAM32`, while set up as a 4x2, it uses a little over half this area.
+*   Ways to access memory to read wall texture slices:
+    *   Use QSPI to read it all into a local buffer: 64x6 = 384 bits. Note that 1024 bits occupy 4x2 tiles, so 384 *might* occupy 3 tiles. I might *just* have this amount of space free in 4x2.
+    *   Consider using just 8 colours per slice (3 bits) with a palette: 64x3 + 8x6 = 240 bits: 2 tiles.
+    *   Select slice address bits in advance, then drive 6 parallel address bits (and read 6 bits) in realtime. In this case, an external memory can directly drive the RGB outputs.
+    *   Have a complex smaller buffer that knows which chunks of texture data to read in advance.
+    *   Have a complex external circuit which knows how to serve our needs.
+*   It might be more realistic to work with a 2-bit sprite (3 colours + transparent): 128 bits, unless the 3 colours are also palette-mapped.
+
+
+[DFFRAM]: https://github.com/TinyTapeout/tt05-dffram-example/blob/main/info.yaml
