Adding more to 0149 about Bus Pirate firmware replacement

--- a/0149-2023-09-30.md
+++ b/0149-2023-09-30.md
@@ -6,14 +6,31 @@
 
 # SPI Flash ROM
 
+## Background
+
 *   I want to make raybox-zero able to read data from a memory of some kind.
 *   SPI seems most likely at the moment, due to low pin count available on TT05.
 *   SPI Flash ROM is pretty standard and cheap these days. I've ordered some on eBay (W25Q32FVSIG, W25Q64BVAIG) and order some on DigiKey (W25Q40CLSNIG-ND, W25Q16JVSSIQ-ND, AT25EU0011A-SSHN-TCT-ND, GD25Q20CTIGR, W25Q32JVSFIQ).
 *   I've also desoldered a BergMicro 25Q80ASSIG (8Mbit) from an ESP-01, and put it on a breakout board. This device should hopefully be able to do at least 25MHz transfers, maybe 60~120MHz, and possibly much higher with DSPI or QSPI.
 *   I'm going to try using my Bus Pirate v3.5 to read it, then program it.
-*   NOTE: For now I think my BP has been specially flashed with JTAG (Bus-Blaster-like) firmware, because it was hooked up to the JTAG port of my XC9572XL test board. I might need to reflash it.
+
+## Flashing the regular Bus Pirate firmware
+
+### Notes
+
+My BP had been specially [flashed with JTAG (Bus-Blaster-like) firmware][JTAG firmware], because it was hooked up to the JTAG port of my XC9572XL test board. I might need to reflash it.
+
 *   When I plug it into my Win 11 laptop it shows up in Device Manager as an FT232 device, with a warning symbol, but after going to Properties I was able to 'update driver' and then it shows up as 'USB Serial Port (COM3)'.
 *   Next step: What serial UI do we get from the BP? I'll install a terminal program, or do USB pass-thru to a Linux VM.
+*   I installed PuTTY and as Dangerous Prototypes advises, the JTAG firmware doesn't have a serial terminal, so it doesn't respond meaningfully.
+*   In terms of putting on normal BP firmware, I'm not clear on the difference between bootloader versions, BP versions,a nd firmware versions.
+*   Oh, according to [0026](./0026-2020-06-06.md#bus-pirate-first), I started with `Firmware v6.1 r1676  Bootloader v4.4`. The official [firmware downloads doco](http://dangerousprototypes.com/docs/Bus_Pirate#Download) says that [firmware 6.1](https://github.com/DangerousPrototypes/Downloads/blob/master/BusPirate.package.v6.1.zip) is the *official* firmware, though there's newer community-maintained stuff [here on GitHub](https://github.com/BusPirate/Bus_Pirate).
+
+### Procedure
+
+1.  Download [BusPirate.package.v6.1.zip](https://github.com/DangerousPrototypes/Downloads/blob/master/BusPirate.package.v6.1.zip).
+2.  
+
 
 # Notes
 
@@ -23,3 +40,4 @@
 [0026]: ./0026-2020-06-06.md
 [0027]: ./0027-2020-06-08.md
 [0028]: ./0028-2020-06-09.md
+[JTAG firmware]: http://dangerousprototypes.com/docs/Bus_Pirate_JTAG_XSVF_player#Replace_firmware
