Update 0149 re loading BP firmware 6.1 and bootloader 4.4

--- a/0149-2023-09-30.md
+++ b/0149-2023-09-30.md
@@ -28,14 +28,44 @@ My BP had been specially [flashed with JTAG (Bus-Blaster-like) firmware][JTAG fi
 
 ### Procedure
 
-1.  Download [BusPirate.package.v6.1.zip](https://github.com/DangerousPrototypes/Downloads/blob/master/BusPirate.package.v6.1.zip).
-2.  
+1.  Download [BusPirate.package.v6.1.zip](https://github.com/DangerousPrototypes/Downloads/blob/master/BusPirate.package.v6.1.zip) (cached [here](./files/0149/BusPirate.package.v6.1.zip)) and extract it.
+2.  Unplug the BP and short pins PGC and PGD of the ICSP header, and plug in the USB cable.
+3.  'MODE' LED will hopefully be lit, indicating it's in the bootloader. I think you need to keep the pins shorted for the duration of this exercise.
+4.  Go into `BPv3-firmware`
+5.  Run `BusPirate-firmware\ds30 Loader GUI.exe`
+6.  Let it download and install .NET if required
+9.  Make sure your COM port is selected.
+10. For `Hex-file`, locate `BPv3-frimware-v6.1.hex` (sic)
+11. Click the `Download` button. Don't try to interact with the app while it's writing the flash: I found it interrupted it and caused an error. I was able to retry the `Download` button, though, and it succeeded:
+    ```
+    Initiating download...
+        Searching for bl . 
+        Found PIC24FJ64GA002 fw ver. 1.0.2
+        Waiting for bootloader to be ready...ok
+        Writing flash...ok
+        Download finished
+        Tx 65.2kB / Rx 382 bytes / 12.4s
+    ```
+12. Exit the ds30 Loader GUI and unplug the BP's USB.
+13. Disconnect PGC/PGD, and plug the BP back in.
+14. Open a terminal program (e.g. PuTTY, and select 'Serial' mode) and try connecting to the BP's COM port.
+15. Issue the `i` command. NOTE: First time I tried, it didn't respond. Not sure why. I tried again, hit ENTER, then got the `HiZ` prompt. Did `i` command again and got to display firmware info:
+    ```
+    HiZ>i
+    Bus Pirate v3.5
+    Firmware v6.1 r1676  Bootloader v4.4
+    DEVID:0x0447 REVID:0x3043 (24FJ64GA002 B5)
+    http://dangerousprototypes.com
+    HiZ>
+    ```
 
 
-# Notes
+# Other Notes
 
 *   Bus Pirate JTAG notes (and references to [Bus Pirate JTAG XSVF player](http://dangerousprototypes.com/docs/Bus_Pirate_JTAG_XSVF_player)) are found in [0026], [0027], and [0028].
 *   Now that we've got an SPI slave implemented in raybox-zero and the FPGA, we could use the Bus Pirate to SPI stuff to it, if for some reason using PicoDeo is unsuitable.
+*   Could also try BP SPI sniffing on raybox-zero.
+*   [Bus Pirate Community Firmware 7.0](http://dangerousprototypes.com/forum/index.php?topic=8498.0#p65290) per [repo](https://github.com/BusPirate/Bus_Pirate).
 
 [0026]: ./0026-2020-06-06.md
 [0027]: ./0027-2020-06-08.md
