Update 0149 with a few other links

--- a/0149-2023-09-30.md
+++ b/0149-2023-09-30.md
@@ -66,6 +66,10 @@ My BP had been specially [flashed with JTAG (Bus-Blaster-like) firmware][JTAG fi
 *   Now that we've got an SPI slave implemented in raybox-zero and the FPGA, we could use the Bus Pirate to SPI stuff to it, if for some reason using PicoDeo is unsuitable.
 *   Could also try BP SPI sniffing on raybox-zero.
 *   [Bus Pirate Community Firmware 7.0](http://dangerousprototypes.com/forum/index.php?topic=8498.0#p65290) per [repo](https://github.com/BusPirate/Bus_Pirate).
+*   [Flashing SPI flash ROM with Bus Pirate](http://dangerousprototypes.com/docs/Flashing_a_BIOS_chip_with_Bus_Pirate)
+*   [Possible datasheet for BG25Q80ASSIG](https://datasheetspdf.com/pdf-file/774876/EON/25Q80A/1) (Berg Micro and Eon [might be the same](https://www.elnec.com/en/device/Berg+Micro/BG25Q80A+(ISP)/#0)?)
+*   [Similar part datasheet](https://j5d2v7d7.stackpathcdn.com/wp-content/uploads/2017/03/25Q80ASSIG.pdf)
+*   [BP dumping SPI flash](http://dangerousprototypes.com/forum/index.php?topic=10453.0)
 
 [0026]: ./0026-2020-06-06.md
 [0027]: ./0027-2020-06-08.md
