--- a/0151-2023-10-03.md
+++ b/0151-2023-10-03.md
@@ -71,6 +71,8 @@
 
 *   Simple DE0-Nano design to read data from SPI flash ROM and display it on screen:
     *   Start with single-bit SPI stream reads out via 1 RGB channel bit.
+    *   Work up to QSPI.
+    *   Can SPI SCLK be linked directly to our main clock for maximum through-put?
 *   DE0-Nano custom clock speed using PLL.
 *   [Different VGA speeds](http://tinyvga.com/vga-timing) (even if lower resolution), e.g. give SPI a workout at:
     *   [640x480@75Hz](http://tinyvga.com/vga-timing/640x480@75Hz) (31.5MHz)
@@ -80,7 +82,7 @@
     *   [800x600@60Hz](http://tinyvga.com/vga-timing/800x600@60Hz) (40.0MHz, 1056w, 256 clocks in HBLANK)
     *   [1024x768@60Hz](http://tinyvga.com/vga-timing/1024x768@60Hz) (65.0MHz) -- But would be 512x768 or 512x384 with 160w clocks in HBLANK
     *   [1440x900@60Hz](http://tinyvga.com/vga-timing/1440x900@60Hz) (106.47MHz) -- Instead do &div;3 (~35.5MHz) for 480x900 with 154w clocks in HBLANK
-
+*   Upgrade BP to community firmware 7.x
 
 # Notes
 
@@ -97,7 +99,5 @@
 
 > Oracle VM VirtualBox supports memory ballooning only on 64-bit hosts. It is not supported on macOS hosts.
 > Memory ballooning does not work well with large pages enabled. To turn off large pages support for a VM, run `VBoxManage modifyvm vmname --large-pages off`
-
-
 
 [Binary Nina]: https://binary.ninja/
