Update 0152; more about preparing for SPI flash ROM cocotb tests

--- a/0152-2023-10-04.md
+++ b/0152-2023-10-04.md
@@ -10,3 +10,40 @@
     *   Want to get a VCD to check SPI timing.
     *   Use iverilog, verilator, or cocotb?
     *   Try running cocotb on Windows? It needs iverilog too.
+*   When was the last time I wrote a TB and cocotb tests? Was it solo_squash? Examples:
+    *   [solo_squash:test/test_solo_squash.py](https://github.com/algofoogle/solo_squash/blob/main/test/test_solo_squash.py)
+    *   [tt03p5-solo-squash:src/test.py](https://github.com/algofoogle/tt03p5-solo-squash/blob/main/src/test.py)
+    *   [wrapped_rgb_mixer:caravel_rgb_mixer/test_rgb_mixer.py](https://github.com/mattvenn/wrapped_rgb_mixer/blob/mpw5/caravel_rgb_mixer/test_rgb_mixer.py)
+*   In Z2A, cocotb is introduced in part 2.1, and used again in 5.1
+
+
+# Set up Python on Windows, to be used by cocotb
+
+I've done this, and created [Tip 2310A](./tips/2310A.md) to describe the process.
+
+
+# Creating the tests
+
+1.  I'll use cocotb for now.
+2.  In the project dir, create `test/`
+3.  In there, create the testbench, `tb.v`. Main points:
+    *   Define inputs and outputs that we want the tests to have control over, giving them meaningful names.
+    *   Have an `initial` block that specifies the `$dumpfile` (in this case `tb.vcd`).
+    *   Instantiate and wire up the design, calling it `uut`. In this case, it's the `vga_spi_rom` module.
+4.  Create a .venv for cocotb and these tests.
+5.  Create `test.py` and fill it in -- more to come.
+6.  Create `Makefile` that uses cocotb -- more to come.
+7.  Write README describing how to set up everything and run the tests.
+
+
+# Set up iverilog on Windows
+
+*   **TBC!**
+*   Need to [set up iverilog on Windows](https://steveicarus.github.io/iverilog/usage/installation.html#compiling-for-windows) too by probably doing a MinGW build, but see also [this](https://iverilog.fandom.com/wiki/Installation_Guide#Compiling_on_MS_Windows_(MinGW)) which links to more detail about MSYS2.
+
+
+
+# Notes
+
+*   [Simulated `spiflash` inside a Caravel testbench](https://github.com/mattvenn/wrapped_rgb_mixer/blob/8134e091d816ef390c96f353831311ba90ed6b76/caravel_rgb_mixer/rgb_mixer_tb.v#L90-L99)
+*   In Verilog, given an `assign` is like a direct wire/net connection, does it matter whether something is on LHS or RHS, if using simple direct signals rather than expressions?
