--- a/tips/2310A.md
+++ b/tips/2310A.md
@@ -66,6 +66,7 @@ If you're in an Integrated Terminal, then relaunch it.
 ## Notes
 
 *   Microsoft's [Getting Started with Python in VS Code] tutorial.
+*   More official doco from Microsoft on [Python environments in VS Code](https://code.visualstudio.com/docs/python/environments).
 *   On Windows, `py -0` will list installed Python versions.
 *   It's possible to run Python tools with `py -m`, e.g. `py -m pip --version` or `py -m venv --help` where pip might already be runnable as-is in the PATH without py, but venv might not be.
 *   I already had Python 3.11.4 installed as part of MinGW64:
