Update 0153: Visual results and next steps

--- a/0153-2023-10-06.md
+++ b/0153-2023-10-06.md
@@ -16,6 +16,26 @@
     *   Confusingly, it seems that (SRP1,SRP0)=00 is the *default* state, i.e. software protection only?
 *   Note [wiring of the vga_spi_rom design's SPI signals to the DE0-Nano](https://github.com/algofoogle/sandpit/blob/b416c575c53ffbe5747e69bf7cebea20fcd43642/fpga/vga_spi_rom/de0nano/top.v#L131-L135):
     ![vga_spi_rom wiring diagram of DE0-Nano pins to SPI chip signals](./i/0153-vga_spi_rom_wiring.svg)
+*   I also pulled /HOLD high with a 2k2 resistor, and pulled /WP low with a 2k2 resistor.
+*   I found that when releasing /CS and DOUT goes HiZ, a high state on DOUT lingers. I used some resistors on hand to add a DOUT pulldown of about 9k.
+*   Doing this exercise was useful for being attentive to the following things:
+    *   During a read, the ROM outputs data on the **falling edge** of SCLK.
+    *   For a standard READ command (03h) this means the first bit (MSB) of the byte being read is presented on MISO as SCLK falls on the final address bit cycle.
+    *   For READ (03h), the last bit presented on MISO will persist as long as /CS remains asserted.
+    *   Effect of timing when using registers, i.e. what's delayed, what's not, and what needs to be aligned.
+    *   Make sure you properly count SCLK falling edges to match the number of bits you expect. This probably won't be a problem (since it usually leads to /CS being released), but can be confusing if you're off by one.
+*   **NOTE:** I also set up pins 39,37,35,33 to respectively output 50MHz, 25MHz, 12.5MHz, and 6.25MHz.
+*   **NOTE:** Because the signal presenting at the MISO input is directly displayed, we can actually use it as a sort of VGA logic probe: Disconnecting it from DOUT, we can touch it to /CS, SCLK, MOSI and (say) the 12.5MHz and 6.25MHz FPGA outputs to see what they're doing.
+
+# Next steps
+
+*   Cocotb tests, using `spiflash` as part of the tb.v
+*   See what happens if /CS is asserted when SCLK has been HIGH idle for a while. Should make no difference.
+*   See what happens if /CS is asserted at the same time that SCLK GOES low. Could be ambiguous?
+*   Write a proper FSM. Include options (external controls??) for how many bits/bytes to read/display, whether to 
+*   Write test patterns and an image to the SPI flash ROM.
+*   See if we can double the clock; go at full 25MHz speed.
+*   Try Dual SPI mode, and QSPI if game.
 
 # Data in my ROM
 
@@ -53,3 +73,31 @@ Here's a snippet of the data in the SPI flash ROM that I'm currently using:
 000001d0  c0 0c 45 7c 96 c0 20 00  42 22 c0 60 44 10 50 44  |..E|.. .B".`D.PD|
 000001e0  20 c0 20 00 42 62 c0 0c  13 c0 20 00 02 22 c0 30  | . .Bb.... ..".0|
 ```
+
+# Results
+
+Below is the result of using a [more recent version of the code](https://github.com/algofoogle/sandpit/blob/4cc82001af3343bc4307209046f15f2051d21a57/fpga/vga_spi_rom/src/rtl/vga_spi_rom.v):
+
+![VGA display result from reading SPI flash ROM](./i/0153-vga_out.jpg)
+
+Close-up:
+
+![Close-up of VGA output](./i/0153-closeup.jpg)
+
+Example of decoding a stream:
+
+![SPI visualisation decoded](./i/0153-spi-decoded.png)
+
+Going from left to right in the image above:
+*   Top row shows:
+    *   Blue for /CS asserted while SCLK and MOSI are low.
+    *   Cyan for SCLK high and MOSI low.
+    *   Magenta for SCLK low and MOSI high.
+    *   White for SCLK high and MOSI high.
+*   Middle row shows data received from DOUT on the chip (miso in the design).
+*   Bottom row shows alternating blue and red regions that are bytes.
+
+Decoding this, we see:
+*   The rising SCLK edge loads each bit into the chip: We can see that, going MSB (left) first, we clock in `00000011`, hence command 03h (READ). Then we clock in 00h, 00h, 60h (address 000060h). During this time, DOUT is high-Z, but I've got ~9k resistor pulling it low for stability.
+*   Immediately as SCLK goes low at the end of the 60h byte, it's the falling edge that causes DOUT to present data (a high bit, in this case). As SCLK continues to present falling edges, each subsequent data bit is presented.
+*   This continues, revealing the data: E9 27 90 04 0C, and this correlates with the ROM data given for address 60h [above](#data-in-my-rom).
