--- a/0154-2023-10-07.md
+++ b/0154-2023-10-07.md
@@ -9,9 +9,11 @@
 *   I was reading that it *seems* SPI slave devices have an internal clock running (perhaps a ring osc) at a multiple (maybe 4x or 6x?) faster than their expected maximum data rate, to allow other logic to run rather than just being limited to SCLK.
 *   Today I want to try making my FPGA-based SPI master control the SPI flash ROM slave at full speed, i.e. make it clock SCLK at the same speed as my design's CLK, but inverted.
 *   I need to mentally work out possible glitches that could occur with gating SCLK (or even NOT gating it) when it is simply driven by !CLK.
-*   If there is no other solution, I might need to have a forced delay ([`(* keep *)`](https://docs.xilinx.com/r/en-US/ug901-vivado-synthesis/KEEP-Example-Verilog)? Also [`synthesis keep`](https://www.intel.com/content/www/us/en/programmable/quartushelp/17.0/hdl/vlog/vlog_file_dir_keep.htm) like [this](https://www.fpgadeveloper.com/2011/06/how-to-keep-a-signal-name-after-mapping.html/) too, and check [this](https://www.reddit.com/r/yosys/comments/e456jg/any_way_to_do_an_equivalent_of_synthesis_syn_keep/)), or use an internal ring osc to make a high-speed master FSM
-*   See if we can deliberately glitch SCLK relative to /CS
+*   If there is no other solution, I might need to have a forced delay ([`(* keep *)`](https://docs.xilinx.com/r/en-US/ug901-vivado-synthesis/KEEP-Example-Verilog)? Also [`synthesis keep`](https://www.intel.com/content/www/us/en/programmable/quartushelp/17.0/hdl/vlog/vlog_file_dir_keep.htm) like [this](https://www.fpgadeveloper.com/2011/06/how-to-keep-a-signal-name-after-mapping.html/) too, and check [this](https://www.reddit.com/r/yosys/comments/e456jg/any_way_to_do_an_equivalent_of_synthesis_syn_keep/)), use a faster clock, or use an internal ring osc to make a high-speed master FSM.
+*   Could we peg SCLK safely for one whole extra clock either side of /CS transitions, to ensure that glitches don't happen UPON /CS transition, but rather before or after?
+*   See if we can deliberately glitch SCLK relative to /CS, and see what happens.
 *   cocotb and spiflash sim: both in iverilog (test benches) and verilator (visual sim).
+*   **NOTE:** The leading /CS assert and coincident/subsequent SCLK edge might end up all being fine, but just be aware that when /CS is released, we don't want an erroneous extra SCLK edge to be sensed that could put a 'Continuous Mode' out of order. I think if SCLK goes high, gets *pegged* high, and then /CS is released, we'll be OK... just so long as a SCLK falling edge is NOT detected.
 
 # TT05 ideas
 
