--- a/0153-2023-10-06.md
+++ b/0153-2023-10-06.md
@@ -101,3 +101,7 @@ Decoding this, we see:
 *   The rising SCLK edge loads each bit into the chip: We can see that, going MSB (left) first, we clock in `00000011`, hence command 03h (READ). Then we clock in 00h, 00h, 60h (address 000060h). During this time, DOUT is high-Z, but I've got ~9k resistor pulling it low for stability.
 *   Immediately as SCLK goes low at the end of the 60h byte, it's the falling edge that causes DOUT to present data (a high bit, in this case). As SCLK continues to present falling edges, each subsequent data bit is presented.
 *   This continues, revealing the data: E9 27 90 04 0C, and this correlates with the ROM data given for address 60h [above](#data-in-my-rom).
+
+I then [modified the code further](https://github.com/algofoogle/sandpit/blob/144e9ceb6f03897ba732c4813c546bb082f6f7ed/fpga/vga_spi_rom/src/rtl/vga_spi_rom.v) to display 32 bytes per line, with each bit being 2x2 pixels:
+
+![2x2 bit display](./i/0153-2x2.jpg)
